fix z-index for modal

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -49,6 +49,7 @@
   right: -100%;
   width: 100%;
   height: 100%;
+  z-index: 999;
   background-color: $_main_bg_color;
   transition: right 0.5s ease;
 
